2007-04-03  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        <rdar://problem/5107422> 
        TOT REGRESSION: Delete key fails to delete text, and cursor disappears in Mail.app
        <rdar://problem/5107413> 
        TOT REGRESSION: Crash deleting text in email (infinite recursion in shouldInsertNode)

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphs):
        Back out the call to shouldInsert until we
        add WebViewInsertActionMoved, because Mail returns
        NO from shouldInsert for WebViewInsertActionPasted
        to override our Paste operation.

2007-04-03  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mitz.

        Make window.innerWidth/innerHeight include the size of any present scrollbar to match Firefox.
        
        Make document.body.clientWidth/clientHeight return the width/height of the visible content when in
        quirks mode to match WinIE.
        
        * bindings/js/kjs_window.cpp:
        (KJS::Window::getValueProperty):
        Return the width and height of the scroll view, not the visible width and height.
        
        * dom/Element.cpp:
        (WebCore::Element::clientWidth):        
        (WebCore::Element::clientHeight):
        Return the visible size if the element is the body element and we're in quirks mode.

2007-04-03  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Updated fix for <rdar://problem/5107095> REGRESSION: disabled text color calculations are slowing down launchtime measurements

        * platform/graphics/Color.cpp: Moved optimization for lightening black and darkening white into the Color class.
        (WebCore::Color::light):
        (WebCore::Color::dark):
        * rendering/RenderTextControl.cpp: (WebCore::disabledTextColor): Skip the difference calculation for black text, which will always be lightened.

2007-04-03  Anders Carlsson  <andersca@apple.com>
